@@ -1,3 +1,7 @@
+2017-02-24 Magnus Hagdorn
+ * piccolo2/player/PlayerApp.py: hook up autointegration options
+ * piccolo2/player/player.ui: add GUI elements to setup autointegration
+
 2017-02-23 Magnus Hagdorn
  * piccolo2/player/PlayerApp.py: display warning messages
 
